# kalshi-bot-alpha

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  PACKAGE_MANIFEST.json  README.md  pyproject.toml
.claude/: AGENTS.md  settings.json  statusline-command.ps1  statusline-tests.ps1  statusline.json
.claude/agents/: accounting-ledger-engineer.md  architecture-boundary-verifier.md  backend-engineer.md  control-plane-verifier.md  data-analyst.md  devops-engineer.md  frontend-engineer.md  governance-approvals-engineer.md  integration-engineer.md  (+24 more)
.github/: pull_request_template.md
config/: demo.example.yaml
docs/: ARCHITECTURE.md  CREDENTIAL_POLICY.md  DATA_MODEL.md  DEMO_ENDPOINT_POLICY.md  EXPERIMENT_REGISTRY_POLICY.md  EXTERNAL_REFERENCE_POLICY.md  FAILURE_TAXONOMY.md  IMPLEMENTATION_STATUS.md  MARKET_ARCHETYPE_POLICY.md  MARKOUT_TOXICITY_TAXONOMY.md  MICROSTRUCTURE_CONTRACT.md  ORDER_STATE_MACHINE.md  PAPER_TRADING_PROTOCOL.md  PHASE1_PLAN.md  QUEUE_CALIBRATION_POLICY.md  QUOTE_EXPECTANCY_POLICY.md  RESEARCH_PROTOCOL.md  RISK_MODEL.md  SAFETY_MODEL.md  SCENARIO_RISK_POLICY.md  STATISTICAL_SUFFICIENCY_POLICY.md  STRATEGY_SPEC.md
docs-dev/: Kalshi-Crypto-Paper-Trading-Bot-Blueprint-v3.md
schemas/: experiment-registration.schema.json  market-archetype.schema.json  markout-toxicity.schema.json  order-state.schema.json  queue-calibration.schema.json  quote-expectancy.schema.json  risk-limits.schema.json  statistical-sufficiency.schema.json  trade-intent.schema.json
scripts/: verify_demo_only.py
tests/: test_demo_endpoint_policy.py  test_phase0_schemas_valid.py
(+730 files in other folders)
